Fixed problem with click outside hook, fixed tooltip overflow, refactored color variables

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,8 +1,3 @@
-/*
-Naming convention
-$[attribute]-[name]--[modifier]
-*/
-
 // COLORS
 :root {
   --color-primary: #322641;
@@ -11,19 +6,21 @@ $[attribute]-[name]--[modifier]
   --color-green--light: #6ea67a;
   --color-green--dark: #358658;
 
+  --color-text: #000;
+  --color-navigation-text: #f1f1f1;
+  --color-navigation-background: #2b2b30;
+  --color-navigation-button-hover: #3e3f44;
+  --color-navigation-border: #4d4c4f;
+
   --color-github: #333333;
-  --color-github--hover: #111111;
+  --color-github-hover: #111111;
   --color-skyblue: #3787e8;
   --color-gray: #87868b;
-  --color-dark-gray: #4d4c4f;
-  --color-gray--light: #bbbcbd;
-  --color-gray--dark: #2b2b30;
-  --color-gray--background: #3e3f44;
-  --color-gray--main: #2b2b30;
   --color-orange: #f2a84c;
   --color-stroke: #e9edf1;
   --color-border: #bfbfbf;
   --color-gray--hover: #f8f8f8;
+  --color-form-border: #bbbcbd;
 
   --color-customization-classic-background: #1e1f21;
   --color-customization-maroon-background: #5b073a;
@@ -40,11 +37,5 @@ $[attribute]-[name]--[modifier]
 
   --default-font-size: 1.6rem;
   --icon-size: 1.8rem;
-
   --page-padding: 2.5rem;
 }
-
-// FONT
-$default-font-size: 1.6rem;
-
-$icon-size: 2rem;
