--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -12,7 +12,7 @@
     font-size: 1.4rem;
     padding: 0.6rem 1.4rem;
     border-radius: 5px;
-    border: 2px solid var(--color-gray--light);
+    border: 2px solid var(--color-form-border);
 
     &::placeholder {
       color: #919394;
@@ -53,7 +53,7 @@
   font-size: 1.4rem;
   padding: 0.6rem 1.4rem;
   border-radius: 5px;
-  border: 2px solid var(--color-gray--light);
+  border: 2px solid var(--color-form-border);
 
   &--from-to {
     display: flex;
@@ -85,7 +85,7 @@
     text-align: center;
     margin-top: 0.8rem;
     padding: 0.6rem 0;
-    border: 1px solid var(--color-gray--light);
+    border: 1px solid var(--color-form-border);
     border-radius: 5px;
     &:hover {
       cursor: pointer;
