--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -3,8 +3,8 @@
   position: relative;
   width: 242px;
   height: 100%;
-  background-color: var(--color-gray--dark);
-  color: #f1f1f1;
+  background-color: var(--color-navigation-background);
+  color: var(--color-navigation-text);
   font-size: 1.4rem;
   // padding: 0 0.8rem;
   z-index: 10;
@@ -17,12 +17,12 @@
     @include sidebar-btn;
     width: 100%;
     color: inherit;
-    background-color: var(--color-gray--dark);
-    border: 1px var(--color-gray--background) solid;
+    background-color: var(--color-navigation-background);
+    border: 1px var(--color-navigation-button-hover) solid;
     font-size: 1.4rem;
     &:hover,
     &:active {
-      background-color: var(--color-gray--background);
+      background-color: var(--color-navigation-button-hover);
       cursor: pointer;
     }
 
@@ -31,11 +31,49 @@
       justify-content: center;
       align-items: center;
       padding: 8px 8px 0 8px;
+      position: relative;
     }
 
     &-icon {
       width: 20px;
       height: 20px;
+    }
+
+    &-menu {
+      display: none;
+      padding: 4px 0;
+      font-size: 14px;
+      width: 184px;
+      border-radius: 0.6rem;
+      background-color: var(--color-navigation-background);
+      border: 1px solid var(--color-border);
+      position: absolute;
+      top: 10px;
+      left: 100%;
+      z-index: 10;
+
+      &--active {
+        display: block;
+      }
+
+      &-item {
+        display: flex;
+        align-items: center;
+        padding: 6px 16px;
+        &:hover {
+          cursor: pointer;
+          background-color: var(--color-navigation-button-hover);
+          .sidebar__add-menu-icon {
+            fill: #fff;
+          }
+        }
+      }
+      &-icon {
+        fill: var(--color-gray);
+        width: 16px;
+        height: 16px;
+        margin-right: 10px;
+      }
     }
   }
 
@@ -44,7 +82,7 @@
     top: 90%;
     left: 14.5px;
     width: 30px;
-    background-color: var(--color-gray--dark);
+    background-color: var(--color-navigation-background);
     border: none;
     border-radius: 0.6rem;
     fill: var(--color-gray);
@@ -54,7 +92,7 @@
     &:hover {
       cursor: pointer;
       fill: var(--color-stroke);
-      background-color: var(--color-gray--background);
+      background-color: var(--color-navigation-button-hover);
     }
 
     // &--active {
@@ -92,7 +130,7 @@
 
     &-container {
       padding: 0.8rem 0.8rem;
-      border-bottom: 1px solid var(--color-dark-gray);
+      border-bottom: 1px solid var(--color-navigation-border);
     }
 
     &--workspace {
@@ -106,12 +144,12 @@
 
     &:hover,
     &:active {
-      background-color: var(--color-gray--background);
+      background-color: var(--color-navigation-button-hover);
       cursor: pointer;
     }
 
     &--active {
-      background-color: var(--color-gray--background);
+      background-color: var(--color-navigation-button-hover);
     }
 
     &-icon {
@@ -129,7 +167,7 @@
     height: 28px;
     margin-bottom: 5px;
     &:hover {
-      background-color: var(--color-gray--background);
+      background-color: var(--color-navigation-button-hover);
       cursor: pointer;
     }
 
@@ -156,7 +194,7 @@
         border-radius: 0.6rem;
         height: 28px;
         &:hover {
-          background-color: var(--color-gray--background);
+          background-color: var(--color-navigation-button-hover);
           cursor: pointer;
           .sidebar__workspace-add-icon {
             fill: #f1f1f1;
@@ -205,7 +243,7 @@
     border-radius: 0.6rem;
     position: relative;
     &:hover {
-      background-color: var(--color-gray--background);
+      background-color: var(--color-navigation-button-hover);
       cursor: pointer;
       .sidebar__more-btn {
         visibility: visible;
@@ -217,7 +255,7 @@
     }
 
     &--active {
-      background-color: var(--color-gray--background);
+      background-color: var(--color-navigation-button-hover);
       .sidebar__more-btn {
         visibility: visible;
       }
@@ -323,10 +361,11 @@
   }
 
   &__tooltip {
+    display: inline;
     visibility: hidden;
-    width: auto;
+    max-width: 180px;
     display: flex;
-    background-color: var(--color-gray--dark);
+    background-color: var(--color-navigation-background);
     padding: 4px 10px;
     border-radius: 6px;
     position: absolute;
@@ -336,6 +375,9 @@
     white-space: nowrap;
     transition: all 0.1s;
     scale: 0%;
+    span {
+      @include showEllipsis;
+    }
 
     &::after {
       content: " ";
@@ -345,7 +387,8 @@
       margin-top: -5px;
       border-width: 5px;
       border-style: solid;
-      border-color: transparent var(--color-gray--dark) transparent transparent;
+      border-color: transparent var(--color-navigation-background) transparent
+        transparent;
     }
   }
 }
